--- a/trunk/mscore/mscore/musescore.qrc
+++ b/trunk/mscore/mscore/musescore.qrc
@@ -155,7 +155,7 @@
       <file>data/icons/text_top.svg</file>
       <file>data/icons/text_bottom.svg</file>
       <file>data/icons/text_vcenter.svg</file>
-      <file>data/icons/mscore.xpm</file>
+      <file>data/icons/mscore.png</file>
       <file>data/icons/hraster.svg</file>
       <file>data/icons/vraster.svg</file>
       <file>data/icons/repitch.svg</file>
@@ -275,7 +275,7 @@
       <file>data/icons-dark/text_top.svg</file>
       <file>data/icons-dark/text_bottom.svg</file>
       <file>data/icons-dark/text_vcenter.svg</file>
-      <file>data/icons-dark/mscore.xpm</file>
+      <file>data/icons-dark/mscore.png</file>
       <file>data/icons-dark/hraster.svg</file>
       <file>data/icons-dark/vraster.svg</file>
       <file>data/icons-dark/repitch.svg</file>
